# beets-originquery

./: .gitignore  pyproject.toml  setup.py
beetsplug/: originquery.py
